Improved torrent trackers page of download properties dialog.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9117 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-ca.xml
+++ b/Languages/default-ca.xml
@@ -4480,7 +4480,7 @@
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="Arxius">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStSt" caption="Trackers">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Trackers">
 			<control/>
 			<control/>
 			<control/>
@@ -4492,6 +4492,8 @@
 			<control caption="Completats (Seeders):"/>
 			<control caption="Incomplets (Peers):"/>
 			<control caption="Mode del rastrejador:"/>
+			<control/>
+			<control/>
 		</dialog>
 		<dialog name="CDownloadGroupDlg" cookie="BuBuEdCoBuCoBuBuEdBuBuBuBuBuBu" caption="Propietats del grup de descàrrega">
 			<control caption="Accepta"/>
