--- a/Languages/default-af.xml
+++ b/Languages/default-af.xml
@@ -4496,7 +4496,7 @@
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="Lêers">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStSt" caption="Trackers">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Trackers">
 			<control/>
 			<control/>
 			<control/>
@@ -4508,6 +4508,8 @@
 			<control caption="Incomplete:"/>
 			<control caption="Incomplete:"/>
 			<control caption="_Refresh"/>
+			<control/>
+			<control/>
 		</dialog>
 		<dialog name="CDownloadGroupDlg" cookie="BuBuEdCoBuCoBuBuEdBuBuBuBuBuBu" caption="Aflaaigroep Eienskappe">
 			<control caption="OK"/>
