--- a/Languages/default-ar.xml
+++ b/Languages/default-ar.xml
@@ -4489,7 +4489,7 @@
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="الملفات">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStSt" caption="المتتبعات">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="المتتبعات">
 			<control/>
 			<control/>
 			<control/>
@@ -4501,6 +4501,8 @@
 			<control caption="الغير مكتملة:"/>
 			<control caption="Incomplete:"/>
 			<control caption="ت_حديث"/>
+			<control/>
+			<control/>
 		</dialog>
 		<dialog name="CDownloadGroupDlg" cookie="BuBuEdCoBuCoBuBuEdBuBuBuBuBuBu" caption="خصائص مجموعة التحميل">
 			<control caption="حسنا"/>
