--- a/Languages/default-fi.xml
+++ b/Languages/default-fi.xml
@@ -4489,7 +4489,7 @@
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="Files">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStSt" caption="Trackers">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Trackers">
 			<control/>
 			<control/>
 			<control/>
@@ -4501,6 +4501,8 @@
 			<control caption="Completed (Seeds):"/>
 			<control caption="Incomplete:"/>
 			<control caption="Tracker Mode:"/>
+			<control/>
+			<control/>
 		</dialog>
 		<dialog name="CDownloadGroupDlg" cookie="BuBuEdCoBuCoBuBuEdBuBuBuBuBuBu" caption="Download Group Properties">
 			<control caption="OK"/>
