--- a/Languages/default-gr.xml
+++ b/Languages/default-gr.xml
@@ -4491,7 +4491,7 @@
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="Αρχεία">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStSt" caption="Trackers">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Trackers">
 			<control/>
 			<control/>
 			<control/>
@@ -4503,6 +4503,8 @@
 			<control caption="Ημιτελές:"/>
 			<control caption="Incomplete:"/>
 			<control caption="_Ανανέωση"/>
+			<control/>
+			<control/>
 		</dialog>
 		<dialog name="CDownloadGroupDlg" cookie="BuBuEdCoBuCoBuBuEdBuBuBuBuBuBu" caption="Ιδιότητες Ομάδας Λήψεων">
 			<control caption="OK"/>
