--- a/Languages/default-hu.xml
+++ b/Languages/default-hu.xml
@@ -4465,7 +4465,7 @@
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="Fájlok">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStSt" caption="Trackerek">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Trackerek">
 			<control/>
 			<control/>
 			<control/>
@@ -4477,6 +4477,8 @@
 			<control caption="Félkész:"/>
 			<control caption="Incomplete:"/>
 			<control caption="_Frissít"/>
+			<control/>
+			<control/>
 		</dialog>
 		<dialog name="CDownloadGroupDlg" cookie="BuBuEdCoBuCoBuBuEdBuBuBuBuBuBu" caption="Letöltési csoportok tulajdonságai">
 			<control caption="OK"/>
