--- a/Languages/default-it.xml
+++ b/Languages/default-it.xml
@@ -4491,7 +4491,7 @@
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="File">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStSt" caption="Tracker">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Tracker">
 			<control/>
 			<control/>
 			<control/>
@@ -4503,6 +4503,8 @@
 			<control caption="Completi (condivisi):"/>
 			<control caption="Incompleti:"/>
 			<control caption="Modalità tracker:"/>
+			<control/>
+			<control/>
 		</dialog>
 		<dialog name="CDownloadGroupDlg" cookie="BuBuEdCoBuCoBuBuEdBuBuBuBuBuBu" caption="Proprietà gruppo di download">
 			<control caption="OK"/>
