--- a/Languages/default-pl.xml
+++ b/Languages/default-pl.xml
@@ -4492,7 +4492,7 @@
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="Pliki">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStSt" caption="Trackery">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Trackery">
 			<control/>
 			<control/>
 			<control/>
@@ -4504,6 +4504,8 @@
 			<control caption="Niekompletne:"/>
 			<control caption="Incomplete:"/>
 			<control caption="Odśwież"/>
+			<control/>
+			<control/>
 		</dialog>
 		<dialog name="CDownloadGroupDlg" cookie="BuBuEdCoBuCoBuBuEdBuBuBuBuBuBu" caption="Właściwości grupy pobierań">
 			<control caption="OK"/>
