--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -4489,7 +4489,7 @@
 		<dialog name="CTorrentFilesPage" cookie="Sy" caption="Файлы">
 			<control/>
 		</dialog>
-		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStSt" caption="Трекеры">
+		<dialog name="CTorrentTrackersPage" cookie="EdEdEdCoBuSyStBuStStStBuBu" caption="Трекеры">
 			<control/>
 			<control/>
 			<control/>
@@ -4501,6 +4501,8 @@
 			<control caption="Полные (сиды):"/>
 			<control caption="Неполные:"/>
 			<control caption="Режим трекера:"/>
+			<control/>
+			<control/>
 		</dialog>
 		<dialog name="CDownloadGroupDlg" cookie="BuBuEdCoBuCoBuBuEdBuBuBuBuBuBu" caption="Свойства группы загрузки">
 			<control caption="OK"/>
