Added shell menu to seeded torrents.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9118 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-af.xml
+++ b/Languages/default-af.xml
@@ -1111,6 +1111,8 @@
 			<item id="ID_DOWNLOADS_HELP" text="_Hulp..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Properties..."/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="S_hell menu"/>
 		</menu>
 		<menu name="CDownloadsWnd.Nothing">
 			<item id="ID_DOWNLOADS_HELP" text="_Hulp..."/>
