--- a/Languages/default-es.xml
+++ b/Languages/default-es.xml
@@ -1111,6 +1111,8 @@
 			<item id="ID_DOWNLOADS_HELP" text="_Ayuda..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Información de torrent"/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="S_hell menu"/>
 		</menu>
 		<menu name="CDownloadsWnd.Nothing">
 			<item id="ID_DOWNLOADS_HELP" text="_Ayuda..."/>
