--- a/Languages/default-chs.xml
+++ b/Languages/default-chs.xml
@@ -1111,6 +1111,8 @@
 			<item id="ID_DOWNLOADS_HELP" text="帮助(_H)..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="属性(_P)"/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="外部菜单(_H)"/>
 		</menu>
 		<menu name="CDownloadsWnd.Nothing">
 			<item id="ID_DOWNLOADS_HELP" text="帮助(_H)..."/>
