--- a/Languages/default-de.xml
+++ b/Languages/default-de.xml
@@ -1111,6 +1111,8 @@
 			<item id="ID_DOWNLOADS_HELP" text="_Hilfe..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="Ei_genschaften..."/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="_Kontextmenü"/>
 		</menu>
 		<menu name="CDownloadsWnd.Nothing">
 			<item id="ID_DOWNLOADS_HELP" text="_Hilfe..."/>
