--- a/Languages/default-heb.xml
+++ b/Languages/default-heb.xml
@@ -1111,6 +1111,8 @@
 			<item id="ID_DOWNLOADS_HELP" text="‪...ע_זרה"/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="...‪מידע על ה_טורנט"/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="S_hell menu"/>
 		</menu>
 		<menu name="CDownloadsWnd.Nothing">
 			<item id="ID_DOWNLOADS_HELP" text="‪...ע_זרה"/>
