--- a/Languages/default-hr.xml
+++ b/Languages/default-hr.xml
@@ -1111,6 +1111,8 @@
 			<item id="ID_DOWNLOADS_HELP" text="Pomoć..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Informacije o Torrentu"/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="S_hell menu"/>
 		</menu>
 		<menu name="CDownloadsWnd.Nothing">
 			<item id="ID_DOWNLOADS_HELP" text="Pomoć..."/>
