--- a/Languages/default-ja.xml
+++ b/Languages/default-ja.xml
@@ -1111,6 +1111,8 @@
 			<item id="ID_DOWNLOADS_HELP" text="ヘルプ(_H)..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="Torrent情報(_I)..."/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="S_hell menu"/>
 		</menu>
 		<menu name="CDownloadsWnd.Nothing">
 			<item id="ID_DOWNLOADS_HELP" text="ヘルプ(_H)..."/>
