--- a/Languages/default-pt-br.xml
+++ b/Languages/default-pt-br.xml
@@ -1111,6 +1111,8 @@
 			<item id="ID_DOWNLOADS_HELP" text="_Ajuda..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Propriedades..."/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="M_enu do shell"/>
 		</menu>
 		<menu name="CDownloadsWnd.Nothing">
 			<item id="ID_DOWNLOADS_HELP" text="_Ajuda..."/>
