--- a/Languages/default-tw.xml
+++ b/Languages/default-tw.xml
@@ -1111,6 +1111,8 @@
 			<item id="ID_DOWNLOADS_HELP" text="說明..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Torrent 資訊..."/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="S_hell menu"/>
 		</menu>
 		<menu name="CDownloadsWnd.Nothing">
 			<item id="ID_DOWNLOADS_HELP" text="說明..."/>
